--- a/LAMP_playbook/apache/tasks/main.yml
+++ b/LAMP_playbook/apache/tasks/main.yml
@@ -1,2 +1,18 @@
 ---
 # tasks file for apache
+- name: Install Apache2 web server
+  apt:
+    name: apache2
+    state: present
+    update_cache: true
+
+- name: Enable Apache modules
+  command: a2enmod
+  args:
+    creates: /etc/apache2/mods-enabled/rewrite.load  # Prevents running if already enabled
+
+- name: Start and enable Apache service
+  service:
+    name: apache2
+    state: started
+    enabled: true
